<resources>
    <string name="app_name">Inventory</string>
    <string name="mainactivity_menu_insert_product">Insert Dummy Product</string>
    <string name="menu_mainactivity_delete_all">Delete All</string>
    <string name="the_stock_is_empty">The stock is empty.</string>
    <string name="please_insert_products">Please insert products.</string>
    <string name="overview">Overview</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="dollar_sign">$</string>
    <string name="supplier_phone">Supplier phone</string>
    <string name="activity_title_add_new_product">Add New Product</string>
    <string name="activity_title_edit_product">Edit Product</string>
    <string name="nivea">Nivea</string>
    <string name="loreal">Loreal</string>
    <string name="revlon">Revlon</string>
    <string name="action_save_product">Save product</string>
    <string name="action_delete_product">Delete product</string>
    <string name="toast_error_insert_product">Insert product failed</string>
    <string name="toast_success_insert_product">Insert product successful</string>
    <string name="toast_error_update_product">Update product failed</string>
    <string name="toast_update_success">Update product successful</string>
    <string name="dialog_message_unsaved_changes">There are unsaved changes to product.   Discard changes?</string>
    <string name="dialog_discard_btn">Discard</string>
    <string name="dialog_btn_keep_editing">Keep Editing</string>
    <string name="edit_error_fill_all_fields">Please fill all fields</string>
    <string name="edit_error_phone_number">Product requires 10 digit supplier phone number</string>
    <string name="et_change_by">Change By</string>
    <string name="edit_dial_error_valid_phone">Must enter valid phone number</string>
    <string name="delete_product_failed">Delete product failed</string>
    <string name="product_deleted_message">Product deleted</string>
    <string name="alert_dialog_delete_product_message">Are you sure you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
