<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/edit_act_margin_vertical"
    android:layout_marginHorizontal="@dimen/default_page_margin"
    tools:context=".EditProductActivity">

<TextView
    android:id="@+id/edit_activity_overview_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:paddingEnd="20dp"
    android:textSize="@dimen/medium_text_size"
    android:textColor="@color/colorPrimaryText"
    android:text="@string/overview"
    app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/product_name_et"
        android:layout_width="@dimen/edit_field_width"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="@id/edit_activity_overview_title"
        app:layout_constraintStart_toEndOf="@+id/edit_activity_overview_title"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_activity_overview_title" />

    <EditText
        android:id="@+id/product_quantity_et"
        android:layout_width="@dimen/edit_field_width"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        app:layout_constraintTop_toBottomOf="@id/product_name_et"
        app:layout_constraintStart_toEndOf="@+id/edit_activity_overview_title" />

    <EditText
        android:id="@+id/product_price_et"
        android:layout_width="@dimen/edit_field_width"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        app:layout_constraintTop_toBottomOf="@id/product_quantity_et"
        app:layout_constraintStart_toEndOf="@+id/edit_activity_overview_title" />

    <TextView
        android:id="@+id/currency_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/product_price_et"
        app:layout_constraintBaseline_toBaselineOf="@id/product_price_et"/>

    <TextView
        android:id="@+id/edit_activity_supplier_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingEnd="20dp"
        android:layout_marginTop="@dimen/default_page_margin"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/colorPrimaryText"
        android:text="Supplier \nInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_price_et"/>

    <Spinner
        android:id="@+id/supplier_name_spinner"
        android:layout_width="@dimen/edit_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_page_margin"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/product_price_et"
        app:layout_constraintStart_toEndOf="@id/edit_activity_supplier_title"/>

    <EditText
        android:id="@+id/supplier_phone_number"
        android:layout_width="@dimen/edit_field_width"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_phone"
        android:layout_marginTop="@dimen/default_page_margin"
        app:layout_constraintTop_toBottomOf="@+id/supplier_name_spinner"
        app:layout_constraintStart_toEndOf="@id/edit_activity_supplier_title"/>

    <Button
        android:id="@+id/call_supplier_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="10dp"
        android:autoLink="phone"
        android:background="@drawable/bg_order_btn"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toEndOf="@id/supplier_phone_number"
        app:layout_constraintBaseline_toBaselineOf="@id/supplier_phone_number"
        />


</android.support.constraint.ConstraintLayout>